--- a/src/drumee/skin/global/utils.scss
+++ b/src/drumee/skin/global/utils.scss
@@ -5,41 +5,120 @@
    # ==================================================================== */
 
 
- 
-.u-jc-center   { @include justify(center); }
-.u-jc-start    { @include justify(flex-start); }
-.u-jc-end      { @include justify(flex-end); }
-.u-jc-sb       { @include justify(space-between); }
-.u-jc-sa       { @include justify(space-around); }
-.u-jc-st       { @include justify(stretch); }
 
-.u-ac-center   { @include align-content(center); }
-.u-ac-start    { @include align-content(flex-start); }
-.u-ac-end      { @include align-content(flex-end); }
+.u-jc-center {
+  @include justify(center);
+}
 
-.u-ai-center   { @include align-items(center); }
-.u-ai-start    { @include align-items(flex-start); }
-.u-ai-end      { @include align-items(flex-end); }
+.u-jc-start {
+  @include justify(flex-start);
+}
 
-.u-as-center   { align-self: center; }
-.u-as-end      { align-self: flex-end; }
-.u-as-start    { align-self: flex-start; }
+.u-jc-end {
+  @include justify(flex-end);
+}
 
-.u-fd-column   { flex-direction: column!important};
-.u-fd-row      { flex-direction: row!important};
-.u-fd-columnr  { flex-direction: column-reverse!important};
-.u-fd-rowr     { flex-direction: row-reverse!important};
+.u-jc-sb {
+  @include justify(space-between);
+}
 
-.u-fw-wrap     { flex-wrap: wrap; }
-.u-fw-nowrap   { flex-wrap: nowrap; }
+.u-jc-sa {
+  @include justify(space-around);
+}
 
-.u-flex-grow   { flex-grow: 1} ;
+.u-jc-st {
+  @include justify(stretch);
+}
 
-.text-center   {text-align: center}
+.u-ac-center {
+  @include align-content(center);
+}
 
-.w-100         {width: 100%!important;}
-.h-100         {height: 100%!important;}
-.clickable     {cursor: pointer;}
+.u-ac-start {
+  @include align-content(flex-start);
+}
+
+.u-ac-end {
+  @include align-content(flex-end);
+}
+
+.u-ai-center {
+  @include align-items(center);
+}
+
+.u-ai-start {
+  @include align-items(flex-start);
+}
+
+.u-ai-end {
+  @include align-items(flex-end);
+}
+
+.u-as-center {
+  align-self: center;
+}
+
+.u-as-end {
+  align-self: flex-end;
+}
+
+.u-as-start {
+  align-self: flex-start;
+}
+
+.u-fd-column {
+  flex-direction: column !important
+}
+
+;
+
+.u-fd-row {
+  flex-direction: row !important
+}
+
+;
+
+.u-fd-columnr {
+  flex-direction: column-reverse !important
+}
+
+;
+
+.u-fd-rowr {
+  flex-direction: row-reverse !important
+}
+
+;
+
+.u-fw-wrap {
+  flex-wrap: wrap;
+}
+
+.u-fw-nowrap {
+  flex-wrap: nowrap;
+}
+
+.u-flex-grow {
+  flex-grow: 1
+}
+
+;
+
+.text-center {
+  text-align: center
+}
+
+.w-100 {
+  width: 100% !important;
+}
+
+.h-100 {
+  height: 100% !important;
+}
+
+.clickable {
+  cursor: pointer;
+}
 
 @include margin-list(margin-top, 120);
 @include margin-list(margin-bottom, 120);
@@ -78,138 +157,113 @@
 }
 
 
-.margin-auto-v{
-    margin-top: auto !important;
-    margin-bottom: auto !important;
+.margin-auto-v {
+  margin-top: auto !important;
+  margin-bottom: auto !important;
 }
 
-.margin-auto-h{
-    margin-left: auto !important;
-    margin-right: auto !important;
+.margin-auto-h {
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 
-.absolute{
-    position: absolute !important;
-    top: 0;
-    left: 0;
+.absolute {
+  position: absolute !important;
+  top: 0;
+  left: 0;
 }
 
-.out-of-screen, .file-selector__ui{
-    position: absolute !important;
-    left: -100000px;
-    top : -100000px;
-    visibility: hidden;
+.out-of-screen,
+.file-selector__ui {
+  position: absolute !important;
+  left: -100000px;
+  top: -100000px;
+  visibility: hidden;
 }
 
-.fill-up{
+.fill-up {
   position: absolute !important;
   left: 0;
-  top : 0;
-  bottom : 0;
-  right : 0;
-  &[data-visible="no"]{
+  top: 0;
+  bottom: 0;
+  right: 0;
+
+  &[data-visible="no"] {
     visibility: visible;
-    z-index:-1000;
+    z-index: -1000;
     left: -5000px;
-    top : -5000px;
-    width:0;
-    height:0;
+    top: -5000px;
+    width: 0;
+    height: 0;
   }
 }
 
-.cursor-pointer, .pointer, .clickable{
-    cursor: pointer !important;
+.cursor-pointer,
+.pointer,
+.clickable {
+  cursor: pointer !important;
 }
-.cursor-help{
-    cursor: help !important;
+
+.cursor-help {
+  cursor: help !important;
 }
 
 .margin-auto {
-    margin:auto !important;
+  margin: auto !important;
 }
 
 .selectable-text {
-  -webkit-user-select: text;  /* Chrome 49+ */
-  -moz-user-select: text;     /* Firefox 43+ */
-  -ms-user-select: text;      /* No support yet */
+  -webkit-user-select: text;
+  /* Chrome 49+ */
+  -moz-user-select: text;
+  /* Firefox 43+ */
+  -ms-user-select: text;
+  /* No support yet */
   user-select: text;
 }
 
 .selectable-text-all {
-  -webkit-user-select: all;  /* Chrome 49+ */
-  -moz-user-select: all;     /* Firefox 43+ */
-  -ms-user-select: all;      /* No support yet */
+  -webkit-user-select: all;
+  /* Chrome 49+ */
+  -moz-user-select: all;
+  /* Firefox 43+ */
+  -ms-user-select: all;
+  /* No support yet */
   user-select: all;
 }
 
-// [data-justify="center"]{
-//   justify-content: center;
-//   margin:auto;
-//   display: flex;
-// }
+.fatal-error {
+  width: 100%;
+}
 
-// [data-justify="top"]{
-//   justify-content: flex-start;
-//   margin-top:0;
-//   display: flex;
-// }
-
-// [data-justify="start"],[data-justify="left"]{
-//   justify-content: flex-start;
-//   margin-left:0;
-//   display: flex;
-// }
-
-// [data-justify="end"],[data-justify="right"]{
-//   justify-content: flex-end;
-//   margin-right:0;
-//   display: flex;
-// }
-
-// [data-justify="bottom"]{
-//   justify-content: flex-end;
-//   margin-bottom:0;
-//   display: flex;
-// }
-
-// [data-justify="between"]{
-//   justify-content: space-between;
-//   display: flex;
-// }
-
-// [data-justify="around"]{
-//   justify-content: space-around;
-//   display: flex;
-// }
-
-
-[data-state="closed"]{
-  z-index:-1 !important;
+[data-state="closed"] {
+  z-index: -1 !important;
   visibility: hidden !important;
   //opacity:0 !important;
-  height:0 !important;
-  width:0 !important;
+  height: 0 !important;
+  width: 0 !important;
   margin: 0 !important;
   padding: 0 !important;
 }
 
-[data-state="open"]{
-  z-index:$xia-z-index-context !important;
+[data-state="open"] {
+  z-index: $xia-z-index-context !important;
   visibility: visible;
   //opacity:1;
 }
 
-[data-hide="yes"]{
+[data-hide="yes"] {
   visibility: hidden;
-  z-index:-2;
-  display:none !important;
+  z-index: -2;
+  display: none !important;
 }
-[data-hide="no"]{
-  z-index:20000;
+
+[data-hide="no"] {
+  z-index: 20000;
   visibility: visible;
 }
 
-[data-position="absolute"]{
+[data-position="absolute"] {
   position: absolute !important;
 }
 
@@ -220,18 +274,19 @@
 
 [contenteditable=true]:empty:before {
   content: attr(placeholder);
-  display: block; /* For Firefox */
+  display: block;
+  /* For Firefox */
 }
 
 strong {
   font-weight: bold !important;
 }
 
-.no-padding{
+.no-padding {
   padding: 0 !important;
 }
 
-.no-border{
+.no-border {
   border: none !important;
 }
 
@@ -252,12 +307,14 @@ strong {
   height: 100%;
   //float: left;
 }
+
 .full-height {
   height: 100%;
 }
+
 .full-x {
   height: 100%;
-  height:auto;
+  height: auto;
 }
 
 .full-width {
@@ -275,15 +332,15 @@ strong {
   width: 25%;
   float: left;
 }
-  
+
 //.dots, 
 .colon {
-	&:after {
-		content: ":";
-	}
+  &:after {
+    content: ":";
+  }
 }
 
 
-.no-selection{
+.no-selection {
   @include no-select()
 }
