--- a/src/drumee/modules/desk/skin/desk/topbar/settings.scss
+++ b/src/drumee/modules/desk/skin/desk/topbar/settings.scss
@@ -225,7 +225,7 @@
       padding: 2px;
     }
     &.grey {
-      cursor: url("https://fonts.drumee.name/svg/with-classes/desktop_comingsoon.svg") 15 15, auto !important;
+      cursor: url(`${protocol}://fonts.drumee.name/svg/with-classes/desktop_comingsoon.svg`) 15 15, auto !important;
       svg {
         color: #c3c3c3;
       }
