--- a/src/drumee/modules/welcome/signup/skin/index.scss
+++ b/src/drumee/modules/welcome/signup/skin/index.scss
@@ -458,7 +458,7 @@
     opacity: 0.7;
     position: absolute;
     right: 15px;
-    top: 15px;
+    top: 0px;
   }
 
 
@@ -471,7 +471,10 @@
     justify-content: center;
     width: 100%;
     @include typo($size: 20px, $line: 28px, $color:$core-default-text-reverse);
-
+    &[data-state="0"]{
+      opacity:0.5;
+      pointer-events: none;
+    }
     &.skip-button {
       background: transparent;
       border: 1px solid $white;
