--- a/src/drumee/modules/welcome/signup/skin/terms-and-conditions.scss
+++ b/src/drumee/modules/welcome/signup/skin/terms-and-conditions.scss
@@ -8,8 +8,8 @@
 
   &__container {
     align-items: center;
-    background: $core-transparency-container-overlay;//$dgc-overlay-background;
-    border-radius: $default-border-radius-bottom;//0 0 6px 6px;
+    background: $core-transparency-container-overlay; //$dgc-overlay-background;
+    border-radius: $default-border-radius-bottom; //0 0 6px 6px;
     height: 100%;
     justify-content: center;
     position: absolute;
@@ -18,11 +18,17 @@
   }
 
   &__content {
-    border-radius : $default-border-radius;
-    background-color: $core-default-background;  
-    box-shadow: $drumee-shadow-box;;//0 0 7px 0 rgba(0,0,0,0.14);
+    border-radius: $default-border-radius;
+    background-color: $core-default-background;
+    box-shadow: $drumee-shadow-box;
+    ; //0 0 7px 0 rgba(0,0,0,0.14);
     height: calc(100% - 110px);
-    width: calc( 100% - 380px);
+    width: calc(100% - 380px);
+    max-width: 900px;
+
+    &[data-device="mobile"] {
+      width: 100%;
+    }
   }
 
   &__header {
@@ -38,11 +44,16 @@
   &__body {
     height: 100%;
     padding: 25px 54px 40px 54px;
+
+    &[data-device="mobile"] {
+      padding: 0;
+    }
+
     width: 100%;
   }
 
   &__body-content {
-    border-radius : $default-border-radius;
+    border-radius: $default-border-radius;
     height: 100%;
     width: 100%;
   }
@@ -86,13 +97,14 @@
     }
 
     &.close {
-      color:$core-default-thinline-icon;
+      color: $core-default-thinline-icon;
       height: 14px;
       right: 10px;
       top: 10px;
       width: 14px;
-      &:hover{
-        color:$core-default-thinline-icon-hover;
+
+      &:hover {
+        color: $core-default-thinline-icon-hover;
       }
     }
 
@@ -116,11 +128,11 @@
   justify-items: center;
   width: 100%;
   margin: 15px auto;
-  
+
   & .button {
-    border-radius : $default-border-radius;
+    border-radius: $default-border-radius;
     @include typo($size: 16px, $line: 19px);
-    align-items:center;
+    align-items: center;
     height: 35px;
     justify-content: center;
     margin: 0px 0 0 12%;
@@ -134,18 +146,18 @@
   border: 1px solid $btn-rollback-border ;
 
   &:hover {
-    border:2px solid $btn-rollback-border-hover ;
-    color: $btn-rollback-text-hover; 
+    border: 2px solid $btn-rollback-border-hover ;
+    color: $btn-rollback-text-hover;
   }
 }
 
 &__button-confirm {
   @include typo($color: $btn-commit-text);
-  background-color: $btn-commit-background;    
+  background-color: $btn-commit-background;
   border: 1px solid $btn-commit-border;
-  
+
   &:hover {
-    background-color:$btn-commit-background-hover ;
+    background-color: $btn-commit-background-hover ;
     border-color: $btn-commit-border-hover;
   }
 }
