--- a/src/drumee/modules/welcome/signup/skin/index.scss
+++ b/src/drumee/modules/welcome/signup/skin/index.scss
@@ -7,7 +7,7 @@
 
 .welcome-signup {
   @import './terms-and-conditions';
-  
+
   &__ui,
   &__main,
   &__container,
@@ -44,6 +44,7 @@
 
     &.b2c-signup,
     &.get-mobile-number {
+
       & .buttons-wrapper,
       & .message-wrapper {
         margin: 5px 0;
@@ -59,6 +60,15 @@
         background-color: #ABAFC7;
       }
     }
+
+    .entry-status {
+      &[data-status="error"] {
+        border-radius: $default-border-radius;
+        border: 2px solid $core-default-border-error;
+      }
+
+    }
+
   }
 
   &__wrapper {
@@ -79,9 +89,10 @@
       }
     }
   }
+
   &__info_wrapper {
-    margin-bottom:30px;
-    width:100%;
+    margin-bottom: 30px;
+    width: 100%;
   }
 
   &__info_wrapper-icon {
@@ -106,8 +117,8 @@
 
   &__row {
     align-items: center;
-    background-color:$core-default-block-background;
-    border-radius:$default-border-radius;
+    background-color: $core-default-block-background;
+    border-radius: $default-border-radius;
     height: 100%;
     max-height: 56px;
     width: 100%;
@@ -129,9 +140,10 @@
 
     &.area-code {
       width: 130px;
-      .entry-reminder__component{
-        &::before{
-          width : 20px;
+
+      .entry-reminder__component {
+        &::before {
+          width: 20px;
           height: 20px;
           content: "+";
           padding-left: 0px;
@@ -156,11 +168,12 @@
       justify-content: center;
       margin-top: 5px;
     }
- 
+
     & .welcome__icon.lock {
-      padding:0px;
+      padding: 0px;
       width: 21px;
       height: 21px;
+
       svg {
         fill: $egrey-2f;
       }
@@ -174,13 +187,15 @@
     &.message-wrapper {
       margin: 75px 0 15px 0;
       height: 100%;
+
       &.message.no-background {
-        width:400px;
-      }    
+        width: 400px;
+      }
+
       &[data-mode="closed"] {
         display: none;
       }
-      
+
       &[data-error="yes"] {
         opacity: .5;
         pointer-events: none;
@@ -201,13 +216,13 @@
   }
 
   &__note {
-    @include typo($size: 20px, $line: 28px,$weight:400, $color: $core-default-text-reverse);
+    @include typo($size: 20px, $line: 28px, $weight: 400, $color: $core-default-text-reverse);
     justify-content: center;
     text-align: center;
     width: 100%;
 
     &.header {
-      @include typo($size: 38px, $line: 45px, $weight:500, $color: $core-default-text-reverse);
+      @include typo($size: 38px, $line: 45px, $weight: 500, $color: $core-default-text-reverse);
     }
 
     &.steps {
@@ -216,7 +231,7 @@
     }
 
     &.drumee-com {
-      @include typo($size: 20px, $line: 28px,$weight:500,$color:$white-f9);
+      @include typo($size: 20px, $line: 28px, $weight: 500, $color: $white-f9);
       position: absolute;
       right: -130px;
       width: auto;
@@ -230,7 +245,7 @@
 
     &.conditions {
       &.static {
-        @include typo($size: 13px, $line: 15px, $weight:400, $color: $core-default-text-reverse);
+        @include typo($size: 13px, $line: 15px, $weight: 400, $color: $core-default-text-reverse);
         width: 110px;
       }
 
@@ -239,19 +254,19 @@
         right: 5px;
 
         &:hover {
-          color:$eviolet;  
+          color: $eviolet;
         }
       }
 
       &.text-underline {
-        @include typo($size: 13px, $line: 15px, $weight:700, $color: $core-default-text-reverse);
+        @include typo($size: 13px, $line: 15px, $weight: 700, $color: $core-default-text-reverse);
         cursor: pointer;
         text-decoration-line: underline;
       }
     }
 
     &.password-tips {
-      @include typo($size: 12px, $line: 16px, $weight:400,$color: $white-f9);
+      @include typo($size: 12px, $line: 16px, $weight: 400, $color: $white-f9);
       padding-top: 47px;
     }
 
@@ -285,30 +300,30 @@
     &.not-now {
       justify-content: flex-end;
     }
-    
+
     &.text-underline {
-      @include typo($size: 14px, $line: 16px, $weight:700, $color: $core-default-text-reverse);
+      @include typo($size: 14px, $line: 16px, $weight: 700, $color: $core-default-text-reverse);
       cursor: pointer;
       text-decoration-line: underline;
 
       &.correct-number {
-      margin-left: 6px;
-      min-width:120px;
-      right: 13px;
-     }
+        margin-left: 6px;
+        min-width: 120px;
+        right: 13px;
+      }
 
-     &.skip-otp {
-       min-width: 120px;
-       right: 24px;
-     }
+      &.skip-otp {
+        min-width: 120px;
+        right: 24px;
+      }
 
-     &.resent-code {
-       min-width: 125px;
-       right : 10px;
-     }
+      &.resent-code {
+        min-width: 125px;
+        right: 10px;
+      }
 
       &:hover {
-        color:$eviolet;
+        color: $eviolet;
       }
     }
   }
@@ -328,11 +343,11 @@
     &.company {
       height: 20px;
       left: 10px;
-      width:  20px;
+      width: 20px;
     }
 
     &.desktop_public {
-      height:22px;
+      height: 22px;
       left: 9px;
       opacity: 0.9;
       width: 22px;
@@ -340,41 +355,42 @@
 
     &.first-name,
     &.last-name {
-      height:22px;
+      height: 22px;
       width: 22px;
-      margin:20px;
-      
+      margin: 20px;
+
       svg {
         fill: $egrey-2f;
-        opacity:0.8;
+        opacity: 0.8;
       }
     }
 
-    &.area-code{
-      height:22px;
+    &.area-code {
+      height: 22px;
       width: 22px;
-      margin:12px;
+      margin: 12px;
     }
+
     &.personal-mobile {
-      height:20px;
+      height: 20px;
       width: 20px;
-      margin:12px;
+      margin: 12px;
     }
 
     &.city {
-      height:22px;
-      opacity:0.7;
+      height: 22px;
+      opacity: 0.7;
       width: 22px;
     }
 
     &.checkbox {
-      border-radius:$default-checkbox-border-radius;
-      height:20px;
+      border-radius: $default-checkbox-border-radius;
+      height: 20px;
       left: 5px;
       width: 20px;
 
       &.conditions {
-        border-radius:$default-checkbox-border-radius;
+        border-radius: $default-checkbox-border-radius;
         height: 18px;
         min-width: 18px;
         padding: 1px;
@@ -404,18 +420,19 @@
     }
   }
 
+
   &__entry {
     & input {
       @include typo($size: 18px, $line: 28px, $color: $core-default-text-color);
       border-bottom: none;
-      
+
       &::placeholder {
-        @include typo($size: 18px, $line: 28px, $weight: 300, $color:$core-default-text-placeholder);
+        @include typo($size: 18px, $line: 28px, $weight: 300, $color: $core-default-text-placeholder);
       }
     }
 
     &[data-status="error"] {
-      border-radius:$default-border-radius;
+      border-radius: $default-border-radius;
       border: 2px solid $core-default-border-error;
     }
 
@@ -433,11 +450,11 @@
     &.area-code {
       padding: 0 0 0 50px;
     }
-    
+
     &.input-box {
-      border-radius:$default-border-radius;
+      border-radius: $default-border-radius;
       align-items: center;
-      background-color:$core-default-background;
+      background-color: $core-default-background;
       height: 56px;
       width: 100%;
 
@@ -449,7 +466,7 @@
     .pw-shower {
       cursor: pointer;
       left: auto;
-      right : 10px;
+      right: 10px;
     }
   }
 
@@ -462,26 +479,28 @@
   }
 
 
-  &__button-confirm {    
+  &__button-confirm {
     align-items: center;
     background-color: $egreen-soft;
-    border-radius:$default-border-radius;
+    border-radius: $default-border-radius;
     cursor: pointer;
     height: 100%;
     justify-content: center;
     width: 100%;
-    @include typo($size: 20px, $line: 28px, $color:$core-default-text-reverse);
-    &[data-state="0"]{
-      opacity:0.5;
+    @include typo($size: 20px, $line: 28px, $color: $core-default-text-reverse);
+
+    &[data-state="0"] {
+      opacity: 0.5;
       pointer-events: none;
     }
+
     &.skip-button {
       background: transparent;
       border: 1px solid $white;
     }
 
     &:hover {
-      box-shadow: 0 0px 13px 0px rgba(169,186,255,0.5);
+      box-shadow: 0 0px 13px 0px rgba(169, 186, 255, 0.5);
     }
   }
 }
