--- a/src/drumee/builtins/player/document/skin/index.scss
+++ b/src/drumee/builtins/player/document/skin/index.scss
@@ -1,8 +1,8 @@
 /* 
   player/document/skin/document.scss
 */
-@import 'slider-pro.css';
-@import 'slider-pro.scss';
+// @import 'slider-pro.css';
+// @import 'slider-pro.scss';
 @import 'mixins/drumee.scss';
 
 .player-document {
