--- a/src/drumee/skin/mixins/drumee.scss
+++ b/src/drumee/skin/mixins/drumee.scss
@@ -9,4 +9,6 @@
 @import './utils.scss';
 @import './vendor.scss';
 @import './z-index.scss';
+@import './vars/colors.scss';
+@import './vars/borders.scss';
 
